--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Backbone + ***</title>
+        <title>React</title>
         <link rel="stylesheet" href="assets/vendor/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/component.css">
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|Open+Sans:400,300,700'>
@@ -18,65 +18,13 @@
 
         <div class="jumbotron">
             <div class="container">
-                <h1>Backbone + ***</h1>
-                <p>This is an example of the Single Page App built with Backbone and ***.</p>
+                <h1>React</h1>
+                <p>This is an example of the Single Page App built with React</p>
             </div>
         </div>
 
-        <section class="container main">
-            <div class="row">
-                <div class="col-md-3">
-                    <h2>JS News</h2>
-
-                    <ul class="list-group">
-                        <li><a href="#" class="list-group-item">Hello World</a></li>
-                        <li><a href="#" class="list-group-item">Bye World</a></li>
-                    </ul>
-                </div><!--col-md-3-->
-
-                <section class="col-md-9">
-                    <article>
-                        <h2>Hello World</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, voluptatum.
-                        Provident accusamus sit, commodi corrupti illo, veniam possimus minima rerum itaque. Magni,
-                        beatae, facere.</p>
-                    </article>
-
-                    <h2>Discussion</h2>
-
-                    <ul class="discussion">
-                        <li>
-                            <b>Foo</b>
-                            <p>Hello, World</p>
-                        </li>
-
-                        <li>
-                            <b>Foo</b>
-                            <p>Bye, World</p>
-                        </li>
-                    </ul>
-                </section><!--col-md-9-->
-            </div>
-        </section><!-- container -->
-
-        <section class="comments">
-            <h3>Write a comment</h3>
-
-            <form role="form">
-                <div class="form-group col-md-6">
-                    <input type="text" id="name" class="form-control input-lg" placeholder="Name">
-                </div>
-
-                <div class="form-group col-md-6">
-                    <input type="email" id="email" class="form-control input-lg" placeholder="Email">
-                </div>
-
-                <div class="form-group col-md-12">
-                    <textarea id="msg" class="form-control input-lg" placeholder="Comment"></textarea>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Post comment</button>
-                </div>
-            </form>
-        </section>
+        <div id="bootstrap">
+        </div>
 
         <footer id="footer">
             <p>
@@ -87,5 +35,19 @@
                 <a href="https://twitter.com/rcarvalhojs">@rcarvalhojs</a>
             </p>
         </footer>
+
+        <script src="assets/vendor/qwest/qwest.min.js"></script>
+        <script src="assets/vendor/react/react-with-addons.js"></script>
+        <script src="assets/vendor/react/JSXTransformer.js"></script>
+        <script src="assets/vendor/pubsub-js/src/pubsub.js"></script>
+
+        <script src="assets/js/stories/articles.js"></script>
+        <script src="assets/js/stories/comments.js"></script>
+
+        <script src="assets/js/components/discussion.js" type="text/jsx"></script>
+        <script src="assets/js/components/comment.js" type="text/jsx"></script>
+        <script src="assets/js/components/article.js" type="text/jsx"></script>
+        <script src="assets/js/components/sidebar.js" type="text/jsx"></script>
+        <script src="assets/js/bootstrap.js" type="text/jsx"></script>
     </body>
 </html>
